@@ -1,5 +1,11 @@
 ﻿$Revision$
 	$Author$ $Date$
+	1. функция Node::toString, возвращает содержимое Node в виде строки
+	2. функция Node::getCountChild, возвращает количество детей узла. Нужна для корректного форматирования в toString
+	3. доп. опция для вывода на экран toString всего документа.
+
+#Revision: 1460
+	#Author: ctapmex Date: 2010-03-12 17:09:13 +0500 (Пт, 12 мар 2010)
 	1. При чтении файла сохраняем версию и кодировку xml, а так же наличие BOM.
 	2. вывод файла (пока на экран) в "нормализованом виде". каждый элемент с новой строки, отступы, 
 		обязательный закрывающий тэг (дажеесли при чтении был один тэг).
